force-app/main/default/objects/KimbleOne__PlanTaskAssignment__c/KimbleOne__PlanTaskAssignment__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Plan Task Assignment</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>PlanTaskAssignment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan Task Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>