force-app/main/default/objects/KimbleOne__PlanTaskAssignment__c/fields/KimbleOne__BaselineCost__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__BaselineCost__c</fullName>
    <formula>KimbleOne__BaselineEffort__c *  KimbleOne__CostRate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Baseline Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>