force-app/main/default/objects/KimbleOne__PlanTaskAssignment__c/fields/KimbleOne__BaselineEffort__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__BaselineEffort__c</fullName>
    <label>Baseline Effort</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>