force-app/main/default/objects/KimbleOne__PlanTaskAssignment__c/fields/KimbleOne__BaselineRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__BaselineRevenue__c</fullName>
    <formula>KimbleOne__BaselineEffort__c  *  KimbleOne__RevenueRate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Baseline Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>