force-app/main/default/objects/KimbleOne__PlanTaskAssignment__c/fields/KimbleOne__CostRate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CostRate__c</fullName>
    <description>Denormalised from Activity Assignment.</description>
    <label>Cost Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>