force-app/main/default/objects/KimbleOne__PlanTaskAssignment__c/fields/KimbleOne__DraftRemainingEffort__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DraftRemainingEffort__c</fullName>
    <label>Draft Remaining Effort</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>