force-app/main/default/objects/KimbleOne__PlanTaskAssignment__c/fields/KimbleOne__EffortCompletePercentage__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__EffortCompletePercentage__c</fullName>
    <formula>KimbleOne__ExpendedEffort__c /  KimbleOne__TotalEffort__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pct Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>