force-app/main/default/objects/KimbleOne__PlanTaskAssignment__c/fields/KimbleOne__ExpendedCost__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExpendedCost__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Calculated by application logic, based on Period Rate Band in which Time Entry booked.</description>
    <label>Expended Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>