force-app/main/default/objects/KimbleOne__PlanTaskAssignment__c/fields/KimbleOne__ExpendedEffort__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExpendedEffort__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Calculated by application logic as Sum(TimeEntries) on or before Tracking Plan end date.</description>
    <label>Expended Effort</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>