force-app/main/default/objects/KimbleOne__PlanTaskAssignment__c/fields/KimbleOne__IntroducedInBaselinePlan__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IntroducedInBaselinePlan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Z_Obsolete - IntroducedInBaselinePlan</label>
    <referenceTo>KimbleOne__BaselinePlan__c</referenceTo>
    <relationshipLabel>Plan Task Assignments</relationshipLabel>
    <relationshipName>Plan_Task_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>