force-app/main/default/objects/KimbleOne__PlanTaskAssignment__c/fields/KimbleOne__PlanActivityAssignment__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PlanActivityAssignment__c</fullName>
    <label>Plan Activity Assignment</label>
    <referenceTo>KimbleOne__PlanActivityAssignment__c</referenceTo>
    <relationshipLabel>Plan Task Assignments</relationshipLabel>
    <relationshipName>PlanTaskAssignments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>