force-app/main/default/objects/KimbleOne__PlanTaskAssignment__c/fields/KimbleOne__PlanTask__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PlanTask__c</fullName>
    <label>Plan Task</label>
    <referenceTo>KimbleOne__PlanTask__c</referenceTo>
    <relationshipLabel>Plan Task Assignments</relationshipLabel>
    <relationshipName>PlanTaskAssignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>