force-app/main/default/objects/KimbleOne__PlanTaskAssignment__c/fields/KimbleOne__RemainingCost__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RemainingCost__c</fullName>
    <formula>KimbleOne__RemainingEffort__c  *  KimbleOne__CostRate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>