force-app/main/default/objects/KimbleOne__PlanTaskAssignment__c/fields/KimbleOne__RemainingEffort__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RemainingEffort__c</fullName>
    <label>Remaining Effort</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>