force-app/main/default/objects/KimbleOne__PlanTaskAssignment__c/fields/KimbleOne__TaskAssignment__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TaskAssignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task Assignment</label>
    <referenceTo>KimbleOne__TaskAssignment__c</referenceTo>
    <relationshipLabel>Plan Task Assignments</relationshipLabel>
    <relationshipName>PlanTaskAssignments</relationshipName>
    <type>Lookup</type>
</CustomField>