force-app/main/default/objects/KimbleOne__PlanTaskAssignment__c/fields/KimbleOne__TotalEffort__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TotalEffort__c</fullName>
    <formula>KimbleOne__ExpendedEffort__c + KimbleOne__RemainingEffort__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Effort</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>