force-app/main/default/objects/KimbleOne__PlanTaskAssignment__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__PlanTask__c</columns>
    <columns>KimbleOne__PlanActivityAssignment__c</columns>
    <columns>KimbleOne__BaselineEffort__c</columns>
    <columns>KimbleOne__ExpendedEffort__c</columns>
    <columns>KimbleOne__RemainingEffort__c</columns>
    <columns>KimbleOne__DraftRemainingEffort__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>